# RatchetCipher

./: .gitignore  README.md  build.gradle  settings.gradle  versions.gradle
app/: build.gradle
app/src/androidTest/java/app/junhyounglee/ratchet/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/app/junhyounglee/ratchet/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/app/junhyounglee/ratchet/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
ratchet/: build.gradle
ratchet/src/androidTest/java/app/junhyounglee/ratchet/: ExampleInstrumentedTest.kt
ratchet/src/androidTest/java/app/junhyounglee/ratchet/core/: RatchetCipherTest.kt
ratchet/src/main/: AndroidManifest.xml
ratchet/src/main/cpp/: CMakeLists.txt  ratchet.c  ratchet.h  ratchet_jni.c
ratchet/src/main/java/app/junhyounglee/ratchet/core/: Destroyable.kt  JniCommon.kt  KeyPair.kt  RatchetCipher.kt  RatchetSessionState.kt
ratchet/src/main/java/app/junhyounglee/ratchet/exception/: InvalidKeyException.kt  RatchetException.kt
ratchet/src/test/java/app/junhyounglee/ratchet/: ExampleUnitTest.kt
